Fri Jun  5 20:42:42 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * TAO_IDL/contrib/mcpp/directive.cpp:
        * TAO_IDL/contrib/mcpp/eval.cpp:
        * TAO_IDL/contrib/mcpp/internal.H:
        * TAO_IDL/contrib/mcpp/lib.cpp:
        * TAO_IDL/contrib/mcpp/main.cpp:
        * TAO_IDL/contrib/mcpp/support.cpp:
        * TAO_IDL/contrib/mcpp/system.cpp:

          Porting for Borland. 
        
Fri Jun  5 21:01:43 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * orbsvcs/orbsvcs/Notify/Notify_Constraint_Interpreter.cpp:

          Fixed a bug in build_tree() that ignored the user defined
          constraint expression when the domain name or event type is
          defined.

        * orbsvcs/tests/Notify/Bug_3688_Regression/Bug_3688_Regression.mpc:
        * orbsvcs/tests/Notify/Bug_3688_Regression/common.h:
        * orbsvcs/tests/Notify/Bug_3688_Regression/consumer.cpp:
        * orbsvcs/tests/Notify/Bug_3688_Regression/run_test.pl:
        * orbsvcs/tests/Notify/Bug_3688_Regression/supplier.cpp:

          Added simple test based on Bug_1884_Regression test.

        * orbsvcs/tests/Notify/Bug_3688_Regression/Bug_3688.mpc:
        * orbsvcs/tests/Notify/Bug_3688_Regression/DllORB.h:
        * orbsvcs/tests/Notify/Bug_3688_Regression/DllORB.cpp:
        * orbsvcs/tests/Notify/Bug_3688_Regression/TestBroadcaster.h:
        * orbsvcs/tests/Notify/Bug_3688_Regression/TestBroadcaster.cpp:
        * orbsvcs/tests/Notify/Bug_3688_Regression/TestListener.h:
        * orbsvcs/tests/Notify/Bug_3688_Regression/TestListener.cpp:
        * orbsvcs/tests/Notify/Bug_3688_Regression/bug3688_export.h:
        * orbsvcs/tests/Notify/Bug_3688_Regression/server.cpp:

          Removed these files.

        * bin/tao_other_tests.lst:

          Added Bug_3688_Regression test.

        * orbsvcs/tests/Notify/Bug_1884_Regression/consumer.cpp:

          Made received flag set true when consumer receives message. It did